--- a/#source/scss/slider.scss
+++ b/#source/scss/slider.scss
@@ -543,3 +543,291 @@
 	}
 }
 //=======================================================================================================
+.features {
+	&__slider {
+		position: relative;
+		.slick-arrow {
+			font-size: 0;
+			position: absolute;
+			top: 45%;
+			z-index: 80;
+			@media (max-width: $md2 + px) {
+				top: 42%;
+			}
+		}
+		.slick-arrow.slick-prev {
+			background-color: #e6655e;
+			width: 50px;
+			height: 57px;
+			border-bottom: 3px solid #e2534b;
+			border-radius: 0px 5px 5px 0px;
+			transition: all 0.3s ease 0s;
+			left: 0;
+			&:before {
+				content: url(../img/icons/double-arrows-left.png);
+				position: absolute;
+				top: 18px;
+				left: 10px;
+			}
+		}
+		.slick-arrow.slick-next {
+			right: 0;
+			background-color: #e6655e;
+			width: 50px;
+			height: 57px;
+			border-bottom: 3px solid #e2534b;
+			border-radius: 5px 0px 0px 5px;
+			transition: all 0.3s ease 0s;
+			&:before {
+				content: url(../img/icons/double-arrows-right.png);
+				position: absolute;
+				top: 18px;
+				right: 10px;
+			}
+		}
+		.slick-arrow.slick-disabled {
+			background-color: #e6655e88;
+			border-bottom: 3px solid #e6655e94;
+		}
+		.slick-dots {
+			position: absolute;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 100%;
+			bottom: -30px;
+			@media (max-width: $md4 + px) {
+				bottom: -20px;
+			}
+		}
+		.slick-dots li {
+			list-style: none;
+			margin: 0px 5px;
+		}
+		.slick-dots li button {
+			font-size: 0;
+			width: 60px;
+			height: 5px;
+			background-color: #b0b8b9;
+			transition: all 0.3s ease 0s;
+			@media (max-width: $md4 + px) {
+				width: 40px;
+			}
+		}
+		.slick-dots li.slick-active button {
+			background-color: #e2534b;
+		}
+	}
+}
+.project-slideshow {
+	&__item {
+		background-color: #f8f8f8;
+		text-align: center;
+		padding: 250px 0px 150px;
+		border-radius: 5px;
+		border-bottom: 3px solid #e5e6e6;
+	}
+	&__text {
+		font-size: 25px;
+		line-height: 30px;
+		font-weight: 700;
+		color: #b0b8b9;
+		margin: 100px 0px 0px 0px;
+	}
+}
+//=======================================================================================================
+.page-slideshow {
+	max-width: 74%;
+	width: 100%;
+	position: relative;
+	margin: 0px 30px 0px 0px;
+	&__item {
+		background-color: #f8f8f8;
+		text-align: center;
+		padding: 240px 0px 145px;
+		border-radius: 5px;
+		border-bottom: 3px solid #e5e6e6;
+	}
+	&__img {
+		img {
+			width: 109px;
+			height: auto;
+		}
+	}
+	&__text {
+		font-size: 25px;
+		line-height: 30px;
+		font-weight: 700;
+		color: #b0b8b8;
+		margin: 74px 0px 0px 0px;
+	}
+	.slick-arrow {
+		font-size: 0;
+		position: absolute;
+		top: 45%;
+		z-index: 80;
+		@media (max-width: $md2 + px) {
+			top: 42%;
+		}
+	}
+	.slick-arrow.slick-prev {
+		background-color: #e6655e;
+		width: 50px;
+		height: 57px;
+		border-bottom: 3px solid #e2534b;
+		border-radius: 0px 5px 5px 0px;
+		transition: all 0.3s ease 0s;
+		left: 0;
+		&:before {
+			content: url(../img/icons/double-arrows-left.png);
+			position: absolute;
+			top: 18px;
+			left: 10px;
+		}
+	}
+	.slick-arrow.slick-next {
+		right: 0;
+		background-color: #e6655e;
+		width: 50px;
+		height: 57px;
+		border-bottom: 3px solid #e2534b;
+		border-radius: 5px 0px 0px 5px;
+		transition: all 0.3s ease 0s;
+		&:before {
+			content: url(../img/icons/double-arrows-right.png);
+			position: absolute;
+			top: 18px;
+			right: 10px;
+		}
+	}
+	.slick-arrow.slick-disabled {
+		background-color: #e6655e88;
+		border-bottom: 3px solid #e6655e94;
+	}
+	.slick-dots {
+		position: absolute;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		bottom: -30px;
+		@media (max-width: $md4 + px) {
+			bottom: -20px;
+		}
+	}
+	.slick-dots li {
+		list-style: none;
+		margin: 0px 5px;
+	}
+	.slick-dots li button {
+		font-size: 0;
+		width: 60px;
+		height: 5px;
+		background-color: #b0b8b9;
+		transition: all 0.3s ease 0s;
+		@media (max-width: $md4 + px) {
+			width: 40px;
+		}
+	}
+	.slick-dots li.slick-active button {
+		background-color: #e2534b;
+	}
+}
+//=======================================================================================================
+.sidebar-slideshow {
+	max-width: 270px;
+	width: 100%;
+	position: relative;
+	&__item {
+		background-color: #f8f8f8;
+		text-align: center;
+		padding: 58px 0px 37px;
+		border-radius: 5px;
+		border-bottom: 3px solid #e5e6e6;
+	}
+	&__img {
+		img {
+			width: 53px;
+			height: auto;
+		}
+	}
+	&__text {
+		font-size: 16px;
+		line-height: 19px;
+		font-weight: 700;
+		color: #b0b8b8;
+		margin: 20px 0px 0px 0px;
+	}
+	.slick-arrow {
+		font-size: 0;
+		position: absolute;
+		top: 38%;
+		z-index: 80;
+		// @media (max-width: $md2 + px) {
+		// 	top: 42%;
+		// }
+	}
+	.slick-arrow.slick-prev {
+		background-color: #e6655e;
+		width: 40px;
+		height: 37px;
+		border-bottom: 3px solid #e2534b;
+		border-radius: 0px 5px 5px 0px;
+		transition: all 0.3s ease 0s;
+		left: 0;
+		&:before {
+			content: url(../img/icons/arrow_left.png);
+			position: absolute;
+			top: 10px;
+			left: 11px;
+		}
+	}
+	.slick-arrow.slick-next {
+		right: 0;
+		background-color: #e6655e;
+		width: 40px;
+		height: 37px;
+		border-bottom: 3px solid #e2534b;
+		border-radius: 5px 0px 0px 5px;
+		transition: all 0.3s ease 0s;
+		&:before {
+			content: url(../img/icons/arrow_right.png);
+			position: absolute;
+			top: 10px;
+			right: 12px;
+		}
+	}
+	.slick-arrow.slick-disabled {
+		background-color: #e6655e88;
+		border-bottom: 3px solid #e6655e94;
+	}
+	.slick-dots {
+		position: absolute;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		bottom: -24px;
+		@media (max-width: $md4 + px) {
+			bottom: -16px;
+		}
+	}
+	.slick-dots li {
+		list-style: none;
+		margin: 0px 5px;
+	}
+	.slick-dots li button {
+		font-size: 0;
+		width: 30px;
+		height: 5px;
+		background-color: #b0b8b9;
+		transition: all 0.3s ease 0s;
+		@media (max-width: $md4 + px) {
+			width: 20px;
+		}
+	}
+	.slick-dots li.slick-active button {
+		background-color: #e2534b;
+	}
+}
+//=======================================================================================================
