--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -81,6 +81,7 @@ body {
 @import "footer";
 @import "portfolio";
 @import "blog";
+@import "features";
 @import "contacts";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>=======================================================
 
@@ -103,6 +104,7 @@ body {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		border-radius: 5px;
 		@media (max-width: $md2 + px) {
 			padding: 20px;
 			margin: 0px 0px 40px 0px;
